--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-cache-assets": "^2.1.0",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
+    "@pixi-pack/split-it": "^0.0.5",
     "concurrently": "^6.0.2",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
